scripts/nullaway/original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8.txt
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/event/TextEvent.java:28: error: [NullAway] initializer method does not guarantee @NonNull fields oldText (line 25), newText (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TextEvent(TextInput source) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:74: error: [NullAway] initializer method does not guarantee @NonNull fields font (line 54), tc (line 56), mouseControlPoint (line 63), world (line 66), keyListener (line 68) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public NUIController(float x, float y) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:50: error: [NullAway] @NonNull static field n not initialized
	private static NUIController n;
	                             ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:296: error: [NullAway] assigning @Nullable expression to @NonNull field
		mouseControlPoint = null;
		                  ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/NUIController.java:329: error: [NullAway] assigning @Nullable expression to @NonNull field
		keyListener = null;
		            ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/AbstractContainer.java:46: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		c.setParent(null);
		            ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/AbstractComponent.java:37: error: [NullAway] initializer method does not guarantee @NonNull field parent (line 35) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public AbstractComponent() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/AbstractComponent.java:41: error: [NullAway] initializer method does not guarantee @NonNull field parent (line 35) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public AbstractComponent(float x, float y) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Rectangle.java:147: error: [NullAway] dereferenced expression other is @Nullable
				PVector anchor = transformToLocalSpace(new PVector(other.getX(), other.getY()));
				                                                        ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Slider.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
	private ControlPoint current = null;
	                     ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Slider.java:169: error: [NullAway] assigning @Nullable expression to @NonNull field
			current = null;
			        ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Slider.java:181: error: [NullAway] assigning @Nullable expression to @NonNull field
			else current = null;
			             ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/AbstractActionable.java:34: error: [NullAway] initializer method does not guarantee @NonNull field action (line 32) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public AbstractActionable(float x, float y) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Frame.java:84: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		c.setParent(null);
		            ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/TextField.java:65: error: [NullAway] initializer method does not guarantee @NonNull fields textCanvas (line 49), controlPoint (line 63) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TextField(float x, float y, float w) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/TextField.java:294: error: [NullAway] assigning @Nullable expression to @NonNull field
			controlPoint = null;
			             ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Circle.java:131: error: [NullAway] dereferenced expression other is @Nullable
				PVector anchor = transformToLocalSpace(new PVector(other.getX(), other.getY()));
				                                                        ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Button.java:46: error: [NullAway] assigning @Nullable expression to @NonNull field
	private ControlPoint current = null;
	                     ^
    (see http://t.uber.com/nullaway )
../original/url5e6a51063b_nuigroup_hci_for_java_tgz-pJ8-nui_squirt_demo_DemoSquirtApplicationJ8/src/nui/squirt/component/Button.java:155: error: [NullAway] assigning @Nullable expression to @NonNull field
			current = null;
			        ^
    (see http://t.uber.com/nullaway )
19 errors
